# SecuScan-AppWeb

./: README.md
.github/workflows/: deploy.yml
deploy/: deploy.sh  nginx-secuscan.conf
server/: Cargo.toml
server/src/: main.rs
server/src/engine/: scanner_web.rs
server/src/models/: mod.rs
server/src/parsers/: binary.rs  config.rs
web/: package.json
web/src/: App.vue
