[package]
name = "secuscan-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum           = { version = "0.8", features = ["multipart"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http     = { version = "0.6", features = ["fs", "limit", "trace", "timeout", "cors", "set-header"] }
tower          = { version = "0.4", features = ["util"] }
tower_governor = "0.7"
tracing            = "0.1"
tracing-subscriber = "0.3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"

# Réutilisé du desktop SecuScan v1.0.5 (parsers/models/export audités)
rayon     = "1"
walkdir   = "2"
regex     = "1"
once_cell = "1"
log       = "0.4"
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1", features = ["v4"] }
sha2      = "0.10"
md5       = "0.7"
hex       = "0.4"
goblin    = { version = "0.9", default-features = false, features = ["pe64", "pe32"] }
yara-x    = "0.9"

# Extraction ZIP des projets uploadés
zip = "2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
